Auto-configure SSH keys for new users and clean up Nginx config
- Add `ext-posix` dependency to `composer.json` to support user detection.
- Implement `setupSshKeys` in `CreateAppCommand` to copy `authorized_keys` from the invoking user (handling `sudo`) to the new app user.
- Ensure proper permissions and ownership are applied to the new user's `.ssh` directory.
- Remove verbose comments from the generated Nginx configuration template.
- Refactor `enableNginxSite` to use `SymfonyStyle` for output consistency.

--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-posix": "*",
         "symfony/config": "7.4.*",
         "symfony/console": "7.4.*",
         "symfony/dependency-injection": "7.4.*",
         "symfony/filesystem": "7.4.*",
         "symfony/process": "7.4.*"
     },
-    "require-dev": {},
     "config": {
         "allow-plugins": {
             "php-http/discovery": true
